# mocca-matrix

./: Cargo.toml
examples/: hexlife.rs
src/: bitzet.rs  canvas.rs  color.rs  effects.rs  hex.rs  i2s.rs  lib.rs  main.rs  math.rs  matrix.rs  power_zones.rs  ws2812.rs
src/app/: cellular.rs  drawing.rs  hexlife.rs  hexlife2.rs  mod.rs  power.rs
