[package]
authors = ["Simon A. Berger <simberger@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "mocca-matrix-rtic"
version = "0.1.0"

[dependencies]
cortex-m = "^0.6"
cortex-m-rt = "^0.6"
cortex-m-semihosting = "^0.3"
panic-halt = "^0.2"
cortex-m-rtic = "0.5.3"
ssd1306 = "^0.5"
embedded-graphics = "^0.6"
heapless = "^0.5"
smart-leds = "^0.3"
ws2812-spi = "^0.4"

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal.git"
branch = "master"
features = ["stm32l4x2", "rt"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "mocca-matrix-rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
